--- a/src/package.json
+++ b/src/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
-    "nodemon": "^2.0.1",
-    "request": "^2.88.0"
+    "nodemon": "^2.0.1"
   }
 }
