--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --timeout 120000"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "nodemon": "^2.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.0.1",
+    "mongodb-memory-server": "^6.6.1"
   }
 }
